Fixed alignment issue on contact screen on Chrome Also fixed the option to do on-disk caching of templates Also fixed aging report showing unapproved invoices
git-svn-id: svn://svn.code.sf.net/p/ledger-smb/code/branches/1.3@5197 4979c152-3d1c-0410-bac9-87ea11338e46

--- a/UI/Contact/contact.css
+++ b/UI/Contact/contact.css
@@ -72,6 +72,7 @@ div.input_group3 {
 }
 
 #company_div div.input_group2 {
+        width: 40em; 
 }
 
 #company_div label {
